2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stephen Roe:
	patch #7710: usb_libusb: Check VID/PID before opening device
	* usb_libusb.c (usbdev_open): Swap the sequence of verifying the
	VID:PID, and opening the device.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #8176: butterfly.c (AVR109 protocol implementation) clean-up and bug-fixing
	* butterfly.c (butterfly_page_erase): Add dummy function to avoid
	segfault when writing to EEPROM.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #35474 Feature request: print fuse values in safemode output
	* config_gram.y: New configuration token "default_safemode".
	* lexer.l: (Dito.)
	* avrdude.conf.in: (Dito.)
	* config.h: Add variable default_safemode.
	* config.c: (Dito.)
	* main.c: Handle default_safemode, including -u option.
	* avrdude.1: Document all this.
	* doc/avrdude.texi: (Dito.)

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by HubertB:
	patch #7657 Add ATmega406 support for avrdude using DRAGON + JTAG
	* avrdude.conf.in (ATmega406): New entry.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Marc de Hoop:
	patch #7606 ATtiny43u support
	* avrdude.conf.in (ATtiny43U): New entry.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #5708 avrdude should make 10 synchronization attempts instead of just one
	* stk500.c (stk500_getsync): Loop 10 times trying to get in
	sync with the programmer.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Ricardo Martins:
	bug #36384 ATxmega32A4 usersig size
	* avrdude.conf.in: Revamp all the ATxmega* entries.  Add new
	entries for ATxmega128A1U, ATxmega128A3U, ATxmega128A4U,
	ATxmega128B1, ATxmega128B3, ATxmega128C3, ATxmega128D3,
	ATxmega16A4U, ATxmega16C4, ATxmega192A3U, ATxmega192C3,
	ATxmega192D3, ATxmega256A3BU, ATxmega256A3U, ATxmega256C3,
	ATxmega256D3, ATxmega32A4U, ATxmega32C4, ATxmega384C3,
	ATxmega384D3, ATxmega64A1U, ATxmega64A3U, ATxmega64A4U,